--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'info.solidsoft.pitest' version '1.15.0'
+    id "se.solrike.sonarlint" version "2.0.0"
+
 }
 
 group = 'org.testify'
@@ -11,8 +14,18 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    testImplementation 'org.pitest:pitest-junit5-plugin:1.2.1'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+
+    implementation 'net.sourceforge.pmd:pmd-java:6.33.0'
+
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+
+
+
 }
 
 jacoco {
@@ -34,6 +47,22 @@ test {
 jacocoTestReport {
     reports {
         xml.required = true
-        html.required = false
+        html.required = true
     }
 }
+
+
+pitest {
+
+    junit5PluginVersion = '1.2.1'
+    pitestVersion = '1.15.2'
+
+    targetClasses = ['org.testify.*']
+    targetTests = ['org.testify.*']
+    outputFormats = ['XML', 'HTML']
+
+    verbose = true
+}
+
+
+
