--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ jacocoTestReport {
     reports {
         xml.required = true
         html.required = true
+        csv.required = true
     }
 }
 
